--- a/diruptor-netty-com/pom.xml
+++ b/diruptor-netty-com/pom.xml
@@ -22,6 +22,11 @@
             <artifactId>lombok</artifactId>
             <version>1.18.8</version>
         </dependency>
+        <dependency>
+            <groupId>org.jboss.marshalling</groupId>
+            <artifactId>jboss-marshalling</artifactId>
+            <version>1.3.0.CR9</version>
+        </dependency>
     </dependencies>
 
     <build>
